# TermRaster

./: Cargo.toml  README.md  ideas.md
src/: canvas.rs  cast.rs  converter.rs  convertion_helper.rs  coord.rs  display.rs  drawer.rs  grapher.rs  grid.rs  main.rs  mem_grid.rs  pixel_buffer.rs  pixelbuffer.rs  renderer.rs  shapes.rs
