[package]
name = "TermRaster"
version = "0.1.0"
authors = ["Jeronimo Capelle <jero.capelle@gmail.com>"]
edition = "2024"
description = "A memory-efficient, zero-dependency ASCII software rasterizer built from scratch."
readme = "README.md"
repository = "https://github.com/JeronimoCapelle/TermRaster"
license = "CC0-1.0"
keywords = ["rust", "cli", "terminal","tui", "graphics"]
categories = ["command-line-utilities","mathematics","command-line-interface","graphics","rendering"]

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "warn"



[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
incremental = true


[profile.dev.package."*"]
opt-level = 3


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"
debug = "line-tables-only"
strip = "none"
debug-assertions = false
overflow-checks = false

[profile.max-perf]
inherits = "release"
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = "symbols"